--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==4.1.6
 djangorestframework==3.14.0
 Markdown==3.4.1
 Pillow==9.4.0
+python-magic==0.4.27
+python-magic-bin==0.4.14
 pytz==2022.7.1
 sqlparse==0.4.3
 tzdata==2022.7
