--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.6.0
 Django==4.1.6
 djangorestframework==3.14.0
 Markdown==3.4.1
+numpy==1.24.2
+opencv-python==4.7.0.68
 Pillow==9.4.0
 python-magic==0.4.27
 python-magic-bin==0.4.14
